<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_greetings"
        android:textSize="@dimen/welcome"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/alt_img_for_dummy"
        android:layout_gravity="center"
        android:src="@drawable/dummy"
        tools:ignore="InefficientWeight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan_1"
        android:textSize="@dimen/slogan"
        android:textAlignment="center" />

    <Button
        android:id="@+id/next_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/button_medium"
        android:textAlignment="center"
        android:layout_gravity="center" />
</LinearLayout>
